--- a/public/404.html
+++ b/public/404.html
@@ -18,3 +18,24 @@
   <p>Page not found. Redirecting...</p>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Page Not Found</title>
+  <script type="text/javascript">
+    // Save the current path
+    sessionStorage.setItem('redirect', window.location.pathname);
+  </script>
+</head>
+<body>
+  <p>Page not found. Redirecting...</p>
+  <script type="text/javascript">
+    // Redirect to the index.html
+    window.location.href = '/csm-frontend/index.html';
+  </script>
+</body>
+</html>
