404.html issues fixes

--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 <body>
   <p>Page not found. Redirecting...</p>
 </body>
-</html>
+</html> -->
 
 
 <!DOCTYPE html>
