--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -16,5 +16,26 @@
 </head>
 <body>
   <p>Page not found. Redirecting...</p>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Page Not Found</title>
+  <script type="text/javascript">
+    // Save the current path
+    sessionStorage.setItem('redirect', window.location.pathname);
+  </script>
+</head>
+<body>
+  <p>Page not found. Redirecting...</p>
+  <script type="text/javascript">
+    // Redirect to the index.html
+    window.location.href = '/csm-frontend/index.html';
+  </script>
 </body>
 </html>
