--- a/public/404.html
+++ b/public/404.html
@@ -1,25 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Page Not Found</title>
-  <script type="text/javascript">
-    // This script redirects the browser to the correct route
-    (function() {
-      var redirect = sessionStorage.getItem('redirect');
-      sessionStorage.removeItem('redirect');
-      if (redirect) {
-        window.history.replaceState(null, null, redirect);
-      }
-    })();
-  </script>
-</head>
-<body>
-  <p>Page not found. Redirecting...</p>
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,7 +13,7 @@
   <p>Page not found. Redirecting...</p>
   <script type="text/javascript">
     // Redirect to the index.html
-    window.location.href = '/csm-frontend/index.html';
+    window.location.href = '/csm-frontend/dashboard';
   </script>
 </body>
 </html>
